# csiro

./: pyproject.toml
src/config/: config_dataset.py
src/data/: csiro_datamodule.py  csiro_dataset.py  transforms.py
src/models/: model_architecture.py  train.py
src/utils/: r2_score.py
